proj1/tests/error/bad_width.tx
\textwidth{10}
sdfsdfds asda

\textwidth{-1}
sdfsdf